# desafio-turivius

./: README.md  pyproject.toml  requirements.txt
crawler/: crawler.py
toscrape/: manage.py
toscrape/books/: models.py  serializer.py  tests.py  views.py
toscrape/books/fixtures/: books.json
toscrape/books/migrations/: 0001_initial.py
toscrape/toscrape/: asgi.py  settings.py  urls.py  wsgi.py
