[tool.poetry]
name = "desafio-turivius"
version = "0.1.0"
description = ""
authors = ["Leon Cruz <leon.cruz.teixeira@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.25.1"
Django = "^3.1.6"
djangorestframework = "^3.12.2"
bs4 = "^0.0.1"
httpx = "^0.16.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.7.0"
pylint = "^2.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
